<resources>
    <string name="app_name">Sugar Control</string>
    <string name="action_save">SAVE</string>
    <string name="back">Back</string>
    <string name="title_sugar_control">Sugar\nControl</string>
    <string name="join_now">Join now</string>
    <string name="btn_login">Already a User?</string>
    <string name="have_an_account_already">Have an account already?</string>
    <string name="new_to_sugar_control">New To Sugar Control?</string>
    <string name="btn_forgot_password">Forgot password?</string>
    <string name="diabetes_type">Diabetes Type:</string>
    <string name="bgl_range_registration_text">Target for your blood glucose level:  (in mmol/L)</string>
    <string name="action_sign_in_short">Register</string>
    <string name="email">Email</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">New Password</string>
    <string name="kg">Kg</string>
    <string name="cm">cm</string>
    <string name="about_alpha_test">Welcome to Sugar Control!</string>
    <string name="btn_to_tips_from_after_sign">Get some tips on \nHow to use Sugar Control -></string>
    <string name="record_hba1c"> Record \nHbA1c</string>
    <string name="record_bgl">Glucose Level</string>
    <string name="record_medicine">Record \nMedicine</string>
    <string name="txt_history">History</string>
    <string name="txt_stats">Statistics</string>
    <string name="change_theme">Change Your Theme</string>
    <string name="change_language">Change Language</string>
    <string name="vertical_ellipsis">&#8942;</string>
    <string name="select_time">Select Time</string>
    <string name="select_date">Select Date</string>
    <string name="more">more -></string>
    <string name="what_is_your_blood_glucose_level">What is your glucose level?</string>
    <string name="notes_title">Notes (optional):</string>
    <string name="double_tap_to_save">Double tap to save!</string>
    <string name="record_using_nfc">record using nfc device</string>
    <string name="what_s_on_your_mind">Enter your query</string>
    <string name="translation_label">Translation:</string>
    <string name="translate">translate</string>
    <string name="input_hint">enter text</string>
    <string name="target_language">Target Language</string>
    <string name="spanish">Spanish</string>
    <string name="french">French</string>
    <string name="italian">Italian</string>
    <string name="microphone">Microphone</string>
    <string name="play">Play</string>
    <string name="title_activity_main">Home</string>
    <string name="title_activity_home">Home</string>
    <string name="title_activity_profile">Profile</string>
    <string name="title_activity_login">Sign in</string>
    <string name="title_activity_sign_up">Sign up</string>
    <string name="title_activity_record">Record an Entry</string>
    <string name="title_previous_records">Previous Entries</string>
    <string name="title_statistics">Statistics</string>
    <string name="first_name">Your First Name:</string>
    <string name="last_name">Your Last Name:</string>
    <string name="height">Your Height:</string>
    <string name="weight">Your Weight:</string>
    <string name="hint_email">Your Email</string>
    <string name="hint_password">Your Password</string>
    <string name="save_personal_settings">Save \n Personal Settings</string>
    <string name="diabetes_type_settings">Your Diabetes type:</string>
    <string name="bgl_range">What range will you aim to keep your blood sugar levels in?</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="main_screen_text_1">Todays average reading:</string>
    <string name="number_of_entries">Number of entries:</string>
    <string name="main_screen_report_title">Today:</string>
    <string name="entries_in_range">Entries in range:</string>
    <string name="entries_below_range">Entries below range</string>
    <string name="entries_above_range">Entries above range</string>
    <string name="avg_blood_glucose_level">Average today:</string>
    <string name="weekly_stats">This Week:</string>
    <string name="weekly_bgl_stats">Weekly blood\nglucose  average</string>
    <string name="title_monthly_avg">This Month:</string>
    <string name="monthly_blg_stat">Monthly blood\nglucose average</string>
    <string name="statistics_screen_title">Blood Glucose</string>
    <string name="medicine_tour">The first allows you to record your medicine. The second, your blood glucose levels, and the third your hba1c level.</string>
    <string name="whatisdiabetesdetail">Diabetes is a serious, lifelong condition where your blood glucose level is too high. There are two main types,Type 1andType 2. They’re different conditions, but they’re both serious. There are some other rarer types of diabetes too. </string>
    <string name="howCanIManage">Exercise, positive habits and diet. Controlling your carb intake is the only way to truly control T2. It takes awhile to get used to, but once you do it\'s no big deal. How low you want to go is up to you, you don't need to get Keto low to have really good control, either.</string>
    <string name="howtotakebgl">In order to take you blood glucose levels, you\'ll need to get yourself a bloog glucose monitoring kit. In the UK, this is usually supplied by your General practition. It is vital that you record and manage your blood glucose levels. Your medical team should ensure that you are comfortable in taking your own blood glcuose levels, or having someone you trust do so.</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="the_level_of_glucose">The level of\n glucose, mmol/L</string>
    <string name="normal_levels">Normal Levels</string>
    <string name="normal_range_num">4.4 - 6.1</string>
    <string name="average_7_days">Average 7 days</string>
    <string name="hint_number">Number</string>
    <string name="avg_this_month">Average This Month</string>
    <string name="avg_monthly_num">4.4 - 6.1</string>
    <string name="what_is_your_hba">What is your hbA1c reading?</string>
    <string name="hint_reading">Reading</string>
    <string name="notes">Notes:</string>
    <string name="enter_hba_details">Enter details about HbA1c result here</string>
    <string name="starting_medication">Let\'s get Started!</string>
    <string name="what_type_meds">What type of treatment do you take?</string>
    <string name="next">Next</string>
    <string name="how_much_insulin">How much insulin did you take?</string>
    <string name="units">Units</string>
    <string name="what_type">What type?</string>
    <string name="brand">Brand name?</string>
    <string name="home">Home</string>
    <string name="insulina_talk">Talk to Insulina</string>
    <string name="emergency">Emergency</string>
    <string name="receive_recordings">Receive Recordings</string>
    <string name="reminders">Reminders</string>
    <string name="support">Support</string>
    <string name="advice">Advice</string>
    <string name="help">Help</string>
    <string name="Settings">Settings</string>
    <string name="log_out">Log out</string>
    <string name="privacy_policy_1">Abdikariim Timer built the Sugar Control app as a Free app. This SERVICE is provided by Abdikariim Timer at no cost and is intended for use as is.
\n
This page is used to inform website visitors regarding my policies with the collection, use, and disclosure of Personal Information if anyone decided to use my Service.
\n
If you choose to use my Service, then you agree to the collection and use of information in relation to this policy. The Personal Information that I collect is used for providing and improving the Service. I will not use or share your information with anyone except as described in this Privacy Policy.
\n
The terms used in this Privacy Policy have the same meanings as in our Terms and Conditions, which is accessible at Sugar Control unless otherwise defined in this Privacy Policy.</string>
<string name="privacy_policy_2">Information Collection and Use</string>
    <string name="privacy_policy_3">For a better experience, while using our Service, I may require you to provide us with certain personally identifiable information, including but not limited to Blood glucose levels, HbA1c levels, email adresses and full names. The information that I request is retained on your device and is not collected by me in any way
\n
The app does use third party services that may collect information used to identify you.
\n
Link to privacy policy of third party service providers used by the app:</string>
   <string name="privacy_policy_4">Log Data</string>
   <string name="privacy_policy_5">I want to inform you that whenever you use my Service, in a case of an error in the app I collect data and information (through third party products) on your phone called Log Data. This Log Data may include information such as your device Internet Protocol (“IP”) address, device name, operating system version, the configuration of the app when utilizing my Service, the time and date of your use of the Service, and other statistics.</string>
   <string name="privacy_policy_6">Cookies</string>
   <string name="privacy_policy_7">Cookies are files with a small amount of data that are commonly used as anonymous unique identifiers. These are sent to your browser from the websites that you visit and are stored on your device\'s internal memory.
\n
This Service does not use these “cookies” explicitly. However, the app may use third party code and libraries that use “cookies” to collect information and improve their services. You have the option to either accept or refuse these cookies and know when a cookie is being sent to your device. If you choose to refuse our cookies, you may not be able to use some portions of this Service.</string>
   <string name="privacy_policy_8">Security</string>
   <string name="privacy_policy_9">I value your trust in providing us your Personal Information, thus we are striving to use commercially acceptable means of protecting it. But remember that no method of transmission over the internet, or method of electronic storage is 100% secure and reliable, and I cannot guarantee its absolute security.
</string>
   <string name="privacy_policy_10">Children\’s Privacy</string>
   <string name="privacy_policy_11">These Services do not address anyone under the age of 13. I do not knowingly collect personally identifiable information from children under 13. In the case I discover that a child under 13 has provided me with personal information, I immediately delete this from our servers. If you are a parent or guardian and you are aware that your child has provided us with personal information, please contact me so that I will be able to do necessary actions.</string>
   <string name="privacy_policy_12">Changes to This Privacy Policy</string>
   <string name="privacy_policy_13">I may update our Privacy Policy from time to time. Thus, you are advised to review this page periodically for any changes. I will notify you of any changes by posting the new Privacy Policy on this page. These changes are effective immediately after they are posted on this page.</string>
   <string name="privacy_policy_14">Contact Us</string>
   <string name="privacy_policy_15">If you have any questions or suggestions about my Privacy Policy, do not hesitate to contact me.</string>
</resources>