<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="350dp"
   android:orientation="vertical"
    android:background="@color/white"
    android:padding="10dp"
    android:layout_gravity="center"
    android:layout_height="475dp">



    <ScrollView
        android:layout_width="wrap_content"
        android:layout_gravity="center"
        android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:paddingHorizontal="15dp"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:id="@+id/privacy_policy_close"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:textColor="@color/colorPrimaryDark"
            android:text="X"
            android:textStyle="bold"
            android:background="@drawable/oval_circle"
            android:layout_gravity="end"
            android:gravity="center"/>
        <TextView
            android:layout_marginTop="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Privacy Policy"
            android:textSize="35sp"
            android:textStyle="bold"
            android:layout_gravity="center"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/privacy_policy_1"/>
        <TextView
            android:layout_marginVertical="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="15sp"
            android:text="@string/privacy_policy_2"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/privacy_policy_3"/>

        <TextView
            android:layout_marginTop="5dp"
            android:text="https://firebase.google.com/policies/analytics/"
            android:id="@+id/TextView01"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:autoLink="web"/>
        <TextView
            android:layout_marginTop="5dp"
            android:text="https://policies.google.com/privacy"
            android:id="@+id/TextView02"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:autoLink="web"/>
        <TextView
            android:layout_marginTop="5dp"
            android:text="https://www.ibm.com/privacy/uk/en/"
            android:id="@+id/TextView03"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:autoLink="web"/>

        <TextView
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/privacy_policy_4"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/privacy_policy_5"/>
        <TextView
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/privacy_policy_6"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/privacy_policy_7"/>
        <TextView
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/privacy_policy_8"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/privacy_policy_9"/>
        <TextView
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/privacy_policy_10"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/privacy_policy_11"/>
        <TextView
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/privacy_policy_12"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/privacy_policy_13"/>
        <TextView
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/privacy_policy_14"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/privacy_policy_15"/>



    </LinearLayout>

    </ScrollView>


</LinearLayout>