<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        layout="@layout/toolbar_done"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_marginTop="16dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginRight="95dp"
            android:text="@string/time"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btn_time_hba1c"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start|right"
            android:background="@color/cardview_light_background"
            android:text="@string/select_time"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/btn_date_hba1c"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:background="@color/cardview_light_background"
            android:text="@string/select_date"
            android:textAllCaps="false" />


    </LinearLayout>
    <TextView
        android:layout_marginLeft="10dp"
        android:layout_marginTop="16dp"
        android:textSize="20sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/what_is_your_hba"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/edit_hba1c_reading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="120dp"
            android:hint="@string/hint_reading"
            android:inputType="numberDecimal" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="%"/>

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/notes"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:textSize="20sp"/>
    <EditText
        android:id="@+id/edit_text_note_hba1c"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_hba_details"/>

    <Button
        android:textAllCaps="false"
        android:background="@color/colorPrimaryDark"
        android:id="@+id/btnSaveEntry_hba1c"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Save Entry" />

</LinearLayout>