<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/grey"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/title_glucose_stats"
            android:layout_width="wrap_content"
            android:gravity="center"
            android:layout_centerInParent="true"
            android:layout_height="wrap_content"
            android:text="@string/the_level_of_glucose"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date"
            android:layout_toRightOf="@id/title_glucose_stats"
            android:layout_marginLeft="50dp"
            android:layout_centerInParent="true"/>

    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/normal_stats"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/normal_levels"/>

        <TextView
            android:id="@+id/text_normal_sugar_levels"
            android:layout_width="wrap_content"
            android:gravity="center"
            android:layout_centerInParent="true"
            android:layout_height="wrap_content"
            android:text="@string/normal_range_num"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date"
            android:layout_toRightOf="@id/text_normal_sugar_levels"
            android:layout_marginLeft="50dp"
            android:layout_centerInParent="true"/>

    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/stats_avg_7days"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/average_7_days"/>

        <TextView
            android:id="@+id/txt_stats_avg_7days"
            android:layout_width="wrap_content"
            android:gravity="center"
            android:layout_centerInParent="true"
            android:layout_height="wrap_content"
            android:hint="@string/hint_number"
            />
        <TextView
            android:id="@+id/txt_stats_avg_7days_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date"
            android:layout_toRightOf="@id/txt_stats_avg_7days"
            android:layout_marginLeft="50dp"
            android:layout_centerInParent="true"/>

    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txt_stats_avg_30days"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/avg_this_month"/>

        <TextView
            android:id="@+id/txt_stats_avg_30days_number"
            android:layout_width="wrap_content"
            android:gravity="center"
            android:layout_centerInParent="true"
            android:layout_height="wrap_content"
            android:text="@string/avg_monthly_num"
            />
        <TextView
            android:id="@+id/txt_stats_avg_30days_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date"
            android:layout_toRightOf="@id/txt_stats_avg_30days_number"
            android:layout_marginLeft="50dp"
            android:layout_centerInParent="true"/>
    </RelativeLayout>

</LinearLayout>